--- a/TripsFrontEnd/package.json
+++ b/TripsFrontEnd/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix"
   },
@@ -36,20 +36,26 @@
     "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.6",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.2",
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.1.1",
     "typescript": "~5.1.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/config.jest.ts"
+    ],
+      "moduleNameMapper": {
+      "@app/(.)": "<rootDir>/src/app/$1",
+      "@src/(.)": "<rootDir>/src/$1"
+    }
   }
 }
